# Phone-Directory-Application-

./: .gitignore  1farag.txt  CMakeLists.txt  FIXES_SUMMARY.md  HOW_TO_ADD_BINARIES.md  Makefile  PACKAGE_INFO.txt  Phone-Directory-Application-run  README.md  README_UPDATED.md  README_v1.0.1.md  binary-files-base64.txt  build_binaries.sh  checksums.txt  install.sh  main  main.cpp  myPhoneData.txt  phone_directory  phone_directory.desktop.in  test_real_data  test_search
.github/workflows/: Phone-Directory-Application-.yml
data/: .gitkeep  Path.txt  myPhoneData.txt  new.txt  phone.txt  yourphonedataexported.txt
src/: Delete_One_Contact.cpp  Delete_One_Contact.h  Paths.cpp  Save_and_exit.cpp  Save_and_exit.h  The_counter.cpp  The_counter.h  addNumber.cpp  addNumber.h  addnumber.cpp  colors.cpp  counter.h  datatree.cpp  datatree.h  deleteAllContacts.cpp  deleteAllContacts.h  deletecontact.cpp  deletecontact.h  exportdata.cpp  exportdata.h  importdatafile.cpp  main.h  make_read_data.cpp  menu.cpp  readList.cpp  readList.h  readlist.cpp  setup.cpp  utils.cpp  utils.h
src/header/: Paths.h  addNumber.h  colors.h  deleteAllContacts.h  exportdata.h  importdatafile.h  make_read_data.h  menu.h  setup.h
